public/stylesheets/installer.css
/* @override 
	http://svn.mymac.com:3000/stylesheets/installer.css
	http://treasure.svn.mymac.com:3000/stylesheets/installer.css
*/

body {
  background: url(../images/app/install/rock-tile.gif);
}

#container {
  position: relative;
}

#content {
  width: 500px;
}

#main {
  float: none;
  padding: 0;
}

#installer {
  width: 400px;
  margin: 100px auto 0 auto;
}

#installer p {
  line-height: 150%;
}

#installer h2 {
  margin: 0;
  padding: 0;
  line-height: 100%;
  text-indent: -9999px;
  height: 20px;
  background: url(../images/app/sheet-top.png) no-repeat;
  border: none;
}

div.overlay-form {
  background: url(../images/app/sheet.png) bottom left no-repeat;
}

#installer h1 {
  background: url(../images/app/install/splash.png)  no-repeat;
  height: 88px;
  text-indent: -9999px;
  margin-bottom: 20px;
}

#installer form div.overlay-form {
  padding: 10px;
}

#installer .help, #finaldomain {
  display: block;
  font-size: 92%;
  line-height: 140%;
  color: #777;
  text-shadow: none;
  font-weight: normal;
  padding: 5px 0;
}

#installer h4 {
  color: #468;
  margin: 15px 20px 5px 20px;
}

#installer pre {
  margin: 10px 9px 10px 0;
  background: #fff;
  border: 1px solid #ccc;
  border-right: none;
  border-left: none;
  padding: 5px;
  font-size: 92%;
}

#installer label {
  font-size: 110%;
  display: block;
  font-weight: bold;
  text-shadow: 2px 2px #fff;
}

/* errors */
#installer #errorExplanation {
  margin: 0 10px 0 0px;
  border-left: 0;
  border-right: 0;
  margin-right: 8px;
}

#installer #errorExplanation h2 {
  margin: 0;
  padding: 0;
  background: none;
  text-indent: 0;
}

#installer #errorExplanation ul, div#error p {
  line-height: 140%;
  margin-left: 20px;
  font-weight: bold;
  color: #c00;
}

div#error p {
  margin-left: 0;
}

#finaldomain {
  font-size: 100%;
}

#finaldomain span {
  font-weight: bold;
}

#import-progress {
  position: relative;
  margin: 0 0 5px 0;
  font-weight: bold;
  color: #fff;
  text-shadow: 2px 2px #452;
  display: block;
  border: 1px solid #eee;
  border-top: 1px solid #444;
  border-left: 1px solid #444;
  padding: 1px;
  width: 350px;
  text-align: center;
  background: #555;
}

#pbar {
  background: #292929;
  font-size: 92%;
  padding: 2px 0;
  display: block;
  overflow: visible;
  height: 18px;
  width: 0;
}

#pbar-percent {
  position: absolute;
  top: 5px;
  left: 50%;
}

#active-reload {
  position: absolute;
  bottom: 10px;
  right: 10px;
}

